# Extract

./: .gitignore  DOC.md  MANIFEST.in  PLAN.md  README.md  flake.nix  pyproject.toml  setup.py
.github/workflows/: package.yml  release.yml
docs/superpowers/plans/: 2026-04-04-compare-diff-v2.md  2026-04-04-phase2-visualization.md  2026-04-04-phase3-comparison.md  2026-04-04-phase5-registry-lineage-todos.md  2026-04-05-phase7-polish.md  2026-04-05-run-browser-popup.md  2026-04-07-phase6-mcp-server.md  2026-04-08-extract-init.md  2026-04-08-live-reload.md
docs/superpowers/specs/: 2026-04-04-compare-diff-v2-design.md  2026-04-05-run-browser-popup-design.md  2026-04-07-phase6-mcp-server-design.md  2026-04-08-extract-init-design.md  2026-04-08-live-reload-design.md
manual/: config.md  mcp.md  packaging.md  sync.md  tui.md  usage.md
pi/extract-pi-tools/: README.md  package.json
pi/extract-pi-tools/extensions/: extract-tools.ts
python/: pyproject.toml
python/src/extract/: __init__.py  __main__.py  cli_query.py  experiment.py  init.py  mcp.py  metrics.py  release_versioning.py  run.py  store.py  sync.py
python/tests/: test_cli_metric_direction.py  test_curve.py  test_hierarchy.py  test_init.py  test_mcp.py  test_metadata.py  test_release_versioning.py  test_sync_curve.py
rust/: Cargo.toml
rust/src/: app.rs  artifact.rs  config.rs  db.rs  event.rs  keys.rs  main.rs  model.rs
rust/src/ui/: chart.rs  compare.rs  dashboard.rs  detail.rs  diff.rs  heatmap.rs  help.rs  layout.rs  lineage.rs  mod.rs  popup.rs  registry.rs  search.rs  selection.rs  statusbar.rs  summary.rs  theme.rs  todo.rs  tree.rs
schema/migrations/: 001_init.sql  002_experiment_metadata.sql
scripts/: generate_test_data.py
