[build-system]
requires = ["setuptools>=64", "setuptools-rust>=1.7"]
build-backend = "setuptools.build_meta"

[project]
name = "extract-tracker"
version = "0.1.0"
description = "Extract: local-first experiment tracking for deep learning"
requires-python = ">=3.10"
dependencies = [
    "python-ulid>=3.0",
    "numpy>=1.21",
    "typing-extensions>=4.15.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.scripts]
extract = "extract.__main__:main"

[tool.setuptools.packages.find]
where = ["python/src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
