[build-system]
requires = ["setuptools>=64", "setuptools-rust>=1.7", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "extract-tracker"
version = "0.2.3"
description = "Local-first experiment tracking for deep learning"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Phil Oh" }]
keywords = [
  "experiment-tracking",
  "machine-learning",
  "deep-learning",
  "sqlite",
  "tui",
  "mcp",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "python-ulid>=3.0",
  "numpy>=1.21",
  "typing-extensions>=4.15.0",
  "tomli>=2.0",
  "mcp>=1.0",
  "rich>=13.0",
  "questionary>=2.0",
]

[project.scripts]
extract = "extract.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["python/src"]

[dependency-groups]
dev = ["build>=1.2", "cibuildwheel>=2.20", "pytest>=9.0.2", "twine>=5.0"]
