[project]
name = "extract-tracker"
version = "0.1.0"
description = "Extract: local-first experiment tracking for deep learning"
requires-python = ">=3.10"
dependencies = [
    "python-ulid>=3.0",
    "numpy>=1.24",
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/extract"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
